Udated alignment issues

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@
     margin-left: 250px; /* To ensure it doesn't overlap with the sidebar */
   }
 
+  /* Content area for the My Story page */
   .content-containerM {
     display: flex;
     justify-content: center; /* Center horizontally */
@@ -27,6 +28,19 @@
     box-sizing: border-box;
     margin-left: 250px; /* To ensure it doesn't overlap with the sidebar */
   }
+
+  .content-containerR {
+    display: flex;
+    flex-direction: column;
+    justify-content: center; /* Center horizontally */
+    align-items: center;     /* Center vertically */
+    height: 70vh;           /* Full viewport height */
+    padding: 20px;
+    background-color: #fff;  /* Adjust this if you have a specific background */
+    box-sizing: border-box;
+    margin-left: 250px; /* To ensure it doesn't overlap with the sidebar */
+  }
+
 
 /* Top Bar Styles */
 .top-bar {
@@ -107,4 +121,10 @@
 p {
     margin-bottom: 20px; /* Add space between paragraphs */
     text-align: justify;
+}
+
+.left-align{
+    align-self:flex-start;
+    width: 100%;
+    text-align:left;
 }
